tests/baselines/reference/parserInterfaceDeclaration1.errors.txt
parserInterfaceDeclaration1.ts(1,21): error TS2304: Cannot find name 'A'.
parserInterfaceDeclaration1.ts(1,23): error TS1172: 'extends' clause already seen.


==== parserInterfaceDeclaration1.ts (2 errors) ====
    interface I extends A extends B {
                        ~
!!! error TS2304: Cannot find name 'A'.
                          ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
    }